--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             >Frontend Mentor</a
           >. <br />
           Coded by
-          <a href="https://www.frontendmentor.io/profile/JonathanGOSantos"
+          <a href="https://jonathangosantos.netlify.app/"
             >Jonathan Santos</a
           >.
         </div>
